objects/BoxDocument__c.object
<CustomObject>
    <description>Managing box interactions to through a UI similar to standard attachments</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>BoxDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Transfer</label>
        <referenceTo>Agency_Transfer__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipName>BoxDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Box_Filename__c</fullName>
        <label>Box Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Location__c</fullName>
        <description>Location URL on BOX.com</description>
        <label>Box Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Box_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Box Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Collateral_Monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Monitoring</label>
        <referenceTo>Collateral_Monitoring__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Valuation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Valuation</label>
        <referenceTo>Collateral_Valuation__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipName>BoxDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condition_Occurrence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Occurrence</label>
        <referenceTo>Condition_Occurrence__c</referenceTo>
        <relationshipName>BoxDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition</label>
        <referenceTo>Condition__c</referenceTo>
        <relationshipName>BoxDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <externalId>true</externalId>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Drawdown__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BOX Ownership for Draw Down</description>
        <label>Drawdown</label>
        <referenceTo>Drawdown__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Tranche__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Box ownership parent</description>
        <label>Facility Tranche</label>
        <referenceTo>Facility_Tranche__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Box Ownership for Facility</description>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin_Ratchet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Margin Ratchet</label>
        <referenceTo>Margin_Ratchet__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter/Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>BoxDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <label>Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Condition</fullName>
                </value>
                <value>
                    <fullName>Matter</fullName>
                </value>
                <value>
                    <fullName>Condition_Occurrence</fullName>
                    <label>Condition Occurrence</label>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PII__c</fullName>
        <inlineHelpText>Document uploaded contains personal identifiable informaiton</inlineHelpText>
        <label>Personally Identifiable Information</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentName__c</fullName>
        <formula>CASE( Owner_Type__c , 
&quot;Account&quot;, 
&quot;Relationship: &quot;&amp;Account__r.Name, 
&quot;Agreement__c&quot;, 
&quot;Agreement: &quot;&amp; Agreement__r.Name, 
&quot;Collateral__c&quot;, 
&quot;Collateral: &quot;&amp; Collateral__r.Name, 
&quot;Condition__c&quot;, 
&quot;Condition: &quot;&amp; Condition__r.Name, 
&quot;Condition_Occurrence__c&quot;, 
&quot;Occurence: &quot;&amp;   Condition_Occurrence__r.Name, 
&quot;advpm__Matter__c&quot;,
&quot;Deal: &quot;&amp;  Matter__r.Name, 
&quot;Drawdown__c&quot;,
&quot;Drawdown:&quot;&amp; Drawdown__r.Name,
&quot;&quot;)</formula>
        <inlineHelpText>Parent Owner Type and Name</inlineHelpText>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prerequisite Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPV_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPV Item</label>
        <referenceTo>SPV_Items__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trigger</label>
        <referenceTo>Trigger__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <label>Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Watcher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Watcher</label>
        <referenceTo>Watcher__c</referenceTo>
        <relationshipLabel>Box Documents</relationshipLabel>
        <relationshipName>Box_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>send_to_docusign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>send to docusign</label>
        <type>Checkbox</type>
    </fields>
    <label>Box Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Box Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>